// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns Google News template with custom values 1`] = `
Object {
  "rss": Object {
    "@version": "2.0",
    "@xmlns:atom": "http://www.w3.org/2005/Atom",
    "@xmlns:content": "http://purl.org/rss/1.0/modules/content/",
    "@xmlns:dc": "http://purl.org/dc/elements/1.1/",
    "@xmlns:media": "http://search.yahoo.com/mrss/",
    "@xmlns:sy": "http://purl.org/rss/1.0/modules/syndication/",
    "channel": Object {
      "atom:link": Object {
        "@href": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/google-news-feed/",
        "@rel": "self",
        "@type": "application/rss+xml",
      },
      "category": "news",
      "copyright": "2020 The Washington Post LLC",
      "description": Object {
        "$": "All the news that's fit to print",
      },
      "image": Object {
        "link": "http://demo-prod.origin.arcpublishing.com",
        "title": "The Daily Prophet",
        "url": "hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/public/JTWX7EUOLJE4FCHYGN2COQAERY.png",
      },
      "item": Array [
        Object {
          "#": Array [
            Object {
              "media:content": Object {
                "@type": "image/png",
                "@url": "hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/public/JTWX7EUOLJE4FCHYGN2COQAERY.png",
                "media:credit": Object {
                  "#": "Harold Hands",
                  "@role": "author",
                  "@scheme": "urn:ebu",
                },
                "media:description": Object {
                  "$": "Hand washing can be fun if you make it a song",
                  "@type": "plain",
                },
                "media:title": Object {
                  "$": "Hand Washing",
                },
              },
            },
          ],
          "category": "coronvirus",
          "content:encoded": Object {
            "$": "<p>try singing the happy birthday song</p><p>be sure to wash your thumbs</p><figure><img src=\\"hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/QHOCF6YFIZCUFIXBVEAXENGFFM.jpg\\" alt=\\"test caption\\"/><figcaption>test caption</figcaption></figure>",
          },
          "description": Object {
            "$": "This is from the subheadlines",
          },
          "guid": Object {
            "#": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
            "@isPermaLink": true,
          },
          "link": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
          "pubDate": "Tue, 07 Apr 2020 15:02:08 +0000",
          "title": Object {
            "$": "Tips for Safe Hand washing",
          },
        },
      ],
      "language": "en",
      "lastBuildDate": StringMatching /\\\\w\\+, \\\\d\\+ \\\\w\\+ \\\\d\\{4\\} \\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\} \\\\\\+0000/,
      "link": "http://demo-prod.origin.arcpublishing.com",
      "sy:updateFrequency": "1",
      "sy:updatePeriod": "weekly",
      "title": Object {
        "$": "The Daily Prophet",
      },
      "ttl": "60",
    },
  },
}
`;

exports[`returns Google News template with default values 1`] = `
Object {
  "rss": Object {
    "@version": "2.0",
    "@xmlns:atom": "http://www.w3.org/2005/Atom",
    "@xmlns:content": "http://purl.org/rss/1.0/modules/content/",
    "@xmlns:dc": "http://purl.org/dc/elements/1.1/",
    "@xmlns:media": "http://search.yahoo.com/mrss/",
    "@xmlns:sy": "http://purl.org/rss/1.0/modules/syndication/",
    "channel": Object {
      "atom:link": Object {
        "@href": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/google-news-feed/",
        "@rel": "self",
        "@type": "application/rss+xml",
      },
      "description": Object {
        "$": "google news News Feed",
      },
      "item": Array [
        Object {
          "#": Array [
            Object {
              "media:content": Object {
                "@type": "image/png",
                "@url": "hi/abcdefghijklmnopqrstuvwxyz=/arc-anglerfish-arc2-prod-demo.s3.amazonaws.com/public/JTWX7EUOLJE4FCHYGN2COQAERY.png",
                "media:credit": Object {
                  "#": "Harold Hands",
                  "@role": "author",
                  "@scheme": "urn:ebu",
                },
                "media:description": Object {
                  "$": "Hand washing can be fun if you make it a song",
                  "@type": "plain",
                },
                "media:title": Object {
                  "$": "Hand Washing",
                },
              },
            },
          ],
          "dc:creator": Object {
            "$": "John Smith, Jane Doe",
          },
          "description": Object {
            "$": "Tips to keep you wash for 20 seconds",
          },
          "guid": Object {
            "#": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
            "@isPermaLink": true,
          },
          "link": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
          "pubDate": "Tue, 07 Apr 2020 15:02:08 +0000",
          "title": Object {
            "$": "Tips for Safe Hand washing",
          },
        },
      ],
      "language": "en",
      "lastBuildDate": StringMatching /\\\\w\\+, \\\\d\\+ \\\\w\\+ \\\\d\\{4\\} \\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\} \\\\\\+0000/,
      "link": "http://demo-prod.origin.arcpublishing.com",
      "sy:updateFrequency": "1",
      "sy:updatePeriod": "hourly",
      "title": Object {
        "$": "google news",
      },
      "ttl": "1",
    },
  },
}
`;

exports[`returns Google News template with empty values 1`] = `
Object {
  "rss": Object {
    "@version": "2.0",
    "@xmlns:atom": "http://www.w3.org/2005/Atom",
    "@xmlns:content": "http://purl.org/rss/1.0/modules/content/",
    "@xmlns:media": "http://search.yahoo.com/mrss/",
    "channel": Object {
      "atom:link": Object {
        "@href": "http://demo-prod.origin.arcpublishing.com/arc/outboundfeeds/google-news-feed/",
        "@rel": "self",
        "@type": "application/rss+xml",
      },
      "description": Object {
        "$": "google news News Feed",
      },
      "item": Array [
        Object {
          "guid": Object {
            "#": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
            "@isPermaLink": true,
          },
          "link": "http://demo-prod.origin.arcpublishing.com/food/2020/04/07/tips-for-safe-hand-washing",
          "pubDate": "Tue, 07 Apr 2020 15:02:08 +0000",
        },
      ],
      "language": "en",
      "lastBuildDate": StringMatching /\\\\w\\+, \\\\d\\+ \\\\w\\+ \\\\d\\{4\\} \\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\} \\\\\\+0000/,
      "link": "http://demo-prod.origin.arcpublishing.com",
      "title": Object {
        "$": "google news",
      },
    },
  },
}
`;
